SigmaCodebackup3rdSep/objects/Product_Serial_Number__c.object
<CustomObject>
    <fields>
        <fullName>Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bin</label>
        <referenceTo>Sublevel_location__c</referenceTo>
        <relationshipLabel>Product Serial Numbers</relationshipLabel>
        <relationshipName>Product_Serial_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPM__c</fullName>
        <label>CPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <formula>(Impressions__c /1000) *  CPM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiry_date__c</fullName>
        <label>Expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Impressions__c</fullName>
        <label>Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product</label>
        <referenceTo>Inventory_Location_Product__c</referenceTo>
        <relationshipLabel>Product Serial Numbers</relationshipLabel>
        <relationshipName>Product_Serial_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Product Serial Numbers</relationshipLabel>
        <relationshipName>Product_Serial_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LIndex__c</fullName>
        <label>LIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location_Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Serial Numbers</relationshipLabel>
        <relationshipName>Product_Serial_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_form__c</fullName>
        <formula>Inventory_Location__r.Location__r.Name</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lot</label>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>Product Serial Numbers</relationshipLabel>
        <relationshipName>Product_Serial_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacture_date__c</fullName>
        <label>Manufacture date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line</label>
        <referenceTo>Product_Order_Price_Book__c</referenceTo>
        <relationshipLabel>Product Serial Numbers</relationshipLabel>
        <relationshipName>Product_Serial_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Product Serial Numbers</relationshipLabel>
        <relationshipName>Product_Serial_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Product Serial Numbers</relationshipLabel>
        <relationshipName>Product_Serial_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Package Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Packaged_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packaged Product</label>
        <referenceTo>PackagedProducts__c</referenceTo>
        <relationshipLabel>Product Serial Numbers</relationshipLabel>
        <relationshipName>Product_Serial_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Code</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Serial Numbers</relationshipLabel>
        <relationshipName>Product_Serial_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Product</label>
        <referenceTo>Purchase_Order_Product__c</referenceTo>
        <relationshipLabel>Product Serial Numbers</relationshipLabel>
        <relationshipName>Product_Serial_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Product Serial Numbers</relationshipLabel>
        <relationshipName>Product_Serial_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qua__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Commission__c</fullName>
        <label>Sales Commission (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Code</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Allocate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_Receiving_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Receiving Product</label>
        <referenceTo>Stock_In_Product__c</referenceTo>
        <relationshipLabel>Product Serial Numbers</relationshipLabel>
        <relationshipName>Product_Serial_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Product Serial Number</label>
    <nameField>
        <displayFormat>PSN-{0000}</displayFormat>
        <label>Product Serial Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Serial Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>